--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
             <div class="container">
                 <div class="nav-logo">
-                    <a class="navbar-brand" href="#">Learn With Akash</a>
+                    <a class="navbar-brand fs-3" href="#">Learn With Akash</a>
                 </div>
 
                 <div class="right-div d-flex order-lg-3">
                     <div class="reg-btn d-none d-md-block">
-                        <button type="button" class="btn btn-outline-primary">Register</button>
+                        <button type="button" class="btn btn-outline-primary fs-3">Register</button>
                     </div>
 
                     <div class="responsive-icon order-lg-3">
@@ -39,7 +39,7 @@
                 </div>
 
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
+                    <div class="navbar-nav fs-3">
                         <a class="nav-link" aria-current="page" href="#">Home</a>
                         <a class="nav-link" href="#">Courses</a>
                         <a class="nav-link" href="#">Deals</a>
@@ -51,6 +51,56 @@
             </div>
         </nav>
         <!-- nav section end -->
+
+        <!-- Carousel start -->
+        <div class="container">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+          
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="images/cover/cover-1.png" class="d-block w-100" alt="cover1">
+                <div class="carousel-caption">
+                  <h1 class="fs-1">Get Started Digital <br>
+                    Learning</h1>
+                  <p>As an online student, you can choose to access your course information and complete your assignments at any time.</p>
+                  <button  type="button" class="btn btn-primary">Get Started
+                </button>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="cover2">
+                <div class="carousel-caption">
+                    <h1 class="fs-1">Get Started Digital <br>
+                        Learning</h1>
+                      <p>As an online student, you can choose to access your course information and complete your assignments at any time.</p>
+                      <button  type="button" class="btn btn-primary">Get Started
+                    </button>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="cover3">
+                <div class="carousel-caption">
+                    <h1 class="fs-1">Get Started Digital <br>
+                        Learning</h1>
+                      <p>As an online student, you can choose to access your course information and complete your assignments at any time.</p>
+                      <button  type="button" class="btn btn-primary">Get Started
+                    </button>
+                </div>
+              </div>
+            </div>
+            
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+
+        </div>
+        <!-- Carousel end -->
     </header>
     <!-- end header section -->
 
