--- a/index.html
+++ b/index.html
@@ -105,9 +105,126 @@
     <!-- end header section -->
 
 
-    <!-- start section -->
+    <!-- start Courses section -->
+    <section id="courses" class="mt-5">
+        <div class="container text-center">
+            <h2>Discover Our Popular
+                Courses</h2>
+                <p>Here our Popular courses list with price</p>
 
-    <!-- end section -->
+                <div class="row row-cols-lg-2 row-cols-1">
+                    <div class="card mb-3 border-0">
+                        <div class="row g-0 border rounded">
+                          <div class="col-md-4">
+                            <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="course-1">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body text-start">
+                              <h5 class="card-title">Fundamental Of UI/UX Design
+                            </h5>
+                              <p class="card-text">UX design is all about identifying and solving user problems; UI design is all about creating intuitive, aesthetically-pleasing.</p>
+                              <p class="card-text text-primary">Price : 20$
+                             </p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="card mb-3 border-0">
+                        <div class="row g-0 border rounded">
+                          <div class="col-md-4">
+                            <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="course-2">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body text-start">
+                              <h5 class="card-title">Javascript Basic to advanced
+                            </h5>
+                              <p class="card-text">A perfect JavaScript course for all those who want to learn and master JavaScript programming skills right from scratch.</p>
+                              <p class="card-text text-primary">Price : 20$
+                             </p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="card mb-3 border-0">
+                        <div class="row g-0 border rounded">
+                          <div class="col-md-4">
+                            <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="course-3">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body text-start">
+                              <h5 class="card-title">Fullstack Web Development
+                            </h5>
+                              <p class="card-text">A full stack web developer is a person who can develop both client and server software.</p>
+                              <p class="card-text text-primary">Price : 20$
+                             </p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="card mb-3 border-0">
+                        <div class="row g-0 border rounded">
+                          <div class="col-md-4">
+                            <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="course-4">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body text-start">
+                              <h5 class="card-title">Digital Marketing
+                            </h5>
+                              <p class="card-text">Digital marketing is the promotion of brands to connect with potential customers using the internet.</p>
+                              <p class="card-text text-primary">Price : 20$
+                             </p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="card mb-3 border-0">
+                        <div class="row g-0 border rounded">
+                          <div class="col-md-4">
+                            <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="course-5">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body text-start">
+                              <h5 class="card-title">Photography Basic Rules
+                            </h5>
+                              <p class="card-text">The art or process of producing images by the action of radiant energy and especially light on a sensitive surface.</p>
+                              <p class="card-text text-primary">Price : 20$
+                             </p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="card mb-3 border-0">
+                        <div class="row g-0 border rounded">
+                          <div class="col-md-4">
+                            <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="course-6">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body text-start">
+                              <h5 class="card-title">Motion Graphics
+                            </h5>
+                              <p class="card-text">Motion graphics are pieces of animation which create the illusion of motion and are usually combined with audio.</p>
+                              <p class="card-text text-primary">Price : 20$
+                             </p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                </div>
+                <div class="course-btn">
+                    <button type="button" class="btn btn-primary">See More Courses
+                    </button>
+                </div>
+        </div>
+
+    </section>
+
+    <!-- end Courses section -->
 
 
     <!-- start section -->
