--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         </div>
                       </div>
 
-                      <div class="card mb-3 border-0">
+                      <div class="card mb-3 border-0 d-none d-lg-block">
                         <div class="row g-0 border rounded">
                           <div class="col-md-4">
                             <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="course-4">
@@ -181,7 +181,7 @@
                         </div>
                       </div>
 
-                      <div class="card mb-3 border-0">
+                      <div class="card mb-3 border-0 d-none d-lg-block">
                         <div class="row g-0 border rounded">
                           <div class="col-md-4">
                             <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="course-5">
@@ -198,7 +198,7 @@
                         </div>
                       </div>
 
-                      <div class="card mb-3 border-0">
+                      <div class="card mb-3 border-0 d-none d-lg-block">
                         <div class="row g-0 border rounded">
                           <div class="col-md-4">
                             <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="course-6">
@@ -216,9 +216,13 @@
                       </div>
 
                 </div>
-                <div class="course-btn">
+                <div class="more-course-btn d-none d-lg-block">
                     <button type="button" class="btn btn-primary">See More Courses
                     </button>
+                </div>
+                <div class="all-course-btn d-lg-none">
+                  <button type="button" class="btn btn-primary">View all
+                  </button>
                 </div>
         </div>
 
@@ -227,8 +231,44 @@
     <!-- end Courses section -->
 
 
-    <!-- start section -->
-    <!-- end section -->
+    <!-- start explore section -->
+    <section id="explore" class="mt-4">
+      <div class="container">
+
+        <div class="card mb-3">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="images/working.png" class="img-fluid rounded-start" alt="working">
+            </div>
+            <div class="col-md-8 d-flex align-items-center">
+              <div class="card-body">
+                <h5 class="card-title fs-1">Explore The elearning Institute</h5>
+                <p class="card-text fs-4">87% of people learning for professional development report career benefits like getting a promotion, a raise, or starting a new career.</p>
+                <div class="row">
+                  <div class="col-6 col-lg-4">
+                    <h4>3.2k+</h4>
+                    <p>Online Course</p>
+                  </div>
+                  <div class="col-6 col-lg-4">
+                    <h4>600+</h4>
+                    <p>Expert member</p>
+                  </div>
+                  <div class="col-6 col-lg-4">
+                    <h4>1k+</h4>
+                    <p>Rating & Review</p>
+                  </div>
+                </div>
+                <button type="button" class="btn btn-primary">Read More
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </section>
+    <!-- end explore section -->
 
 
     <!-- start section -->
