--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>learn with Akash</title>
-    <!-- css file -->
-    <link rel="stylesheet" href="style.css">
     <!-- bootstrap css cdn link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- css file -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -238,7 +238,7 @@
         <div class="card mb-3">
           <div class="row g-0">
             <div class="col-md-4">
-              <img src="images/working.png" class="img-fluid rounded-start" alt="working">
+              <img src="images/working.png" class="img-fluid rounded-start h-100" alt="working">
             </div>
             <div class="col-md-8 d-flex align-items-center">
               <div class="card-body">
@@ -271,8 +271,56 @@
     <!-- end explore section -->
 
 
-    <!-- start section -->
-    <!-- end section -->
+    <!-- start join section -->
+    <section id="join" class="">
+      <div class="container bg-primary rounded d-flex flex-column flex-lg-row justify-content-around p-3 align-items-center">
+        <div class="text text-white p-3">
+          <h2>Ready to join?</h2>
+          <p>You can join with us</p>
+        </div>
+        <div class="btn">
+          <button type="button" class="btn btn-light text-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">Register Now
+          </button>
+        </div>
+
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Register Now</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+
+              <div class="modal-body">
+                <form>
+                  <div class="mb-3">
+                    <label for="Email" class="col-form-label">Email:</label>
+                    <input type="email" class="form-control" id="Email" required>
+                  </div>
+                  <div class="mb-3">
+                    <label for="Name" class="col-form-label">Name:</label>
+                    <input type="text" class="form-control" id="Name" required>
+                  </div>
+
+                  <div class="mb-3">
+                    <label for="Password" class="col-form-label">Password:</label>
+                    <input type="password" class="form-control" id="Password" required>
+                  </div>
+
+                </form>
+              </div>
+
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Submit</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section>
+    <!-- end join section -->
 
 
     <!-- start section -->
