--- a/index.html
+++ b/index.html
@@ -323,7 +323,70 @@
     <!-- end join section -->
 
 
-    <!-- start section -->
+    <!-- start students section -->
+    <section id="students" class="mt-5">
+      <div class="container">
+        <h2 class="text-center text-md-start">Meet Our Successfull Students</h2>
+        <p class="text-center text-md-start">Here are our Successfull student list</p>
+        <div class="student">
+          <div class="row">
+            <div class="col-lg-3 col-12 col-md-6">
+              <div class="border rounded">
+              <img src="images/student/student-1.png" alt="Awlad Hossain" class="img-fluid w-100">
+              <div class="text-center mt-3">
+                <h3>Awlad Hossain</h3>
+                <p>UIUX Designer</p>
+              </div>
+            </div>
+            </div>
+            <div class="col-lg-3 col-12 col-md-6">
+              <div class="border rounded">
+              <img src="images/student/student-2.png" alt="Jannatul Islam" class="img-fluid w-100">
+              <div class="text-center mt-3">
+              <h3>Jannatul Islam</h3>
+              <p>Motion Design</p>
+            </div>
+            </div>
+            </div>
+            <div class="col-lg-3 col-12 col-md-6 mt-md-3 mt-lg-0">
+              <div class="border rounded">
+              <img src="images/student/student-3.png" alt="Imran Hossain" class="img-fluid w-100">
+              <div class="text-center mt-3">
+                <h3>Imran Hossain</h3>
+                <p>Graphics Designer</p>
+              </div>
+            </div>
+            </div>
+            <div class="col-lg-3 col-12 col-md-6 mt-md-3 mt-lg-0">
+              <div class="border rounded">
+              <img src="images/student/student-4.png" alt="Nishi Akter" class="img-fluid w-100">
+              <div class="text-center mt-3">
+                <h3>Nishi Akter</h3>
+                <p>Web Developer</p>
+              </div>
+            </div>
+            </div>
+          </div>
+        </div>
+        <div class="d-block text-center mt-4">
+          <button type="button" class="btn btn-primary">View all
+          </button>
+        </div>
+      </div>
+
+    </section>
+    <!-- end students section -->
+   
+
+     <!-- start section -->
+    <!-- end section -->
+    
+
+     <!-- start section -->
+    <!-- end section -->
+
+
+     <!-- start section -->
     <!-- end section -->
 
     <!-- bootstrap js cdn link -->
