--- a/index.html
+++ b/index.html
@@ -478,7 +478,36 @@
     <!-- end Frequently section -->
 
 
-     <!-- start section -->
+    <!-- start companies section -->
+    <section id="companies" class="mb-3 d-none d-lg-block">
+      <div class="container">
+        <h2 class="text-center mb-3">Trusted by over 800+ companies</h2>
+        <div class="row">
+          <div class="col-lg-2">
+            <img src="images/company/company-1.png" alt="company-1" class="img-fluid">
+          </div>
+          <div class="col-lg-2">
+            <img src="images/company/company-2.png" alt="company-2" class="img-fluid">
+          </div>
+          <div class="col-lg-2">
+            <img src="images/company/company-3.png" alt="company-3" class="img-fluid">
+          </div>
+          <div class="col-lg-2">
+            <img src="images/company/company-4.png" alt="company-4" class="img-fluid">
+          </div>
+          <div class="col-lg-2">
+            <img src="images/company/company-5.png" alt="company-5" class="img-fluid">
+          </div>
+          <div class="col-lg-2">
+            <img src="images/company/company-6.png" alt="company-6" class="img-fluid">
+          </div>
+        </div>
+      </div>
+
+    </section>
+    <!-- end companies section -->
+
+    <!-- start section -->
     <!-- end section -->
 
     <!-- bootstrap js cdn link -->
