--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- bootstrap css cdn link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/9d154c82e5.js" crossorigin="anonymous"></script>
     <!-- css file -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -507,8 +509,22 @@
     </section>
     <!-- end companies section -->
 
-    <!-- start section -->
-    <!-- end section -->
+    <!-- start footer section -->
+    <section id="footer" class="mt-5">
+     <div class="container-fluid text-white text-center py-5 bg-dark">
+      <h2>Learn With Akash</h2>
+      <p>Office 41, Zawaya Buildin, Ghala Muscat,</p>
+      <p>Sultanate of Oman</p>
+      <p>Privacy Ploicy | Terms of use</p>
+      <div class="icon">
+        <i class="fa-brands fa-facebook fs-4 mx-2"></i>
+        <i class="fa-brands fa-twitter fs-4 mx-2"></i>
+        <i class="fa-brands fa-linkedin-in fs-4 mx-2"></i>
+        <i class="fa-brands fa-tiktok fs-4 mx-2"></i>
+      </div>
+     </div>
+    </section>
+    <!-- end footer section -->
 
     <!-- bootstrap js cdn link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
