--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
           
             <div class="carousel-inner">
-              <div class="carousel-ite active">
+              <div class="carousel-item active">
                 <img src="images/cover/cover-1.png" class="d-block w-100" alt="cover1">
                 <div class="carousel-caption">
                   <h1 class="fs-1">Get Started Digital <br>
