--- a/index.html
+++ b/index.html
@@ -475,10 +475,10 @@
       <p>Sultanate of Oman</p>
       <p>Privacy Ploicy | Terms of use</p>
       <div class="icon">
-        <a href="#"><i class="fa-brands fa-facebook fs-4 mx-2"></i></a>
-        <a href="#"></a><i class="fa-brands fa-twitter fs-4 mx-2"></i></a>
-        <a href="#"></a><i class="fa-brands fa-linkedin-in fs-4 mx-2"></i></a>
-        <a href="#"></a><i class="fa-brands fa-tiktok fs-4 mx-2"></i></a>
+        <a href="#"><i class="fa-brands fa-facebook fs-4 mx-2 text-white"></i></a>
+        <a href="#"><i class="fa-brands fa-twitter fs-4 mx-2 text-white"></i></a>
+        <a href="#"><i class="fa-brands fa-linkedin-in fs-4 mx-2 text-white"></i></a>
+        <a href="#"><i class="fa-brands fa-tiktok fs-4 mx-2 text-white"></i></a>
       </div>
      </div>
     </section>
